<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/wood"
        tools:context=".details.DetailsFragment"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
                android:id="@+id/title_card"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toTopOf="@+id/roman_title"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="50dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

            <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/border"
                    android:orientation="horizontal">
                <ImageView
                        android:id="@+id/book_image_details"
                        android:transitionName="@string/transition_animation"
                        android:layout_width="122dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/book"
                        android:scaleType="fitXY"
                        android:layout_height="148dp"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                    <TextView
                            android:id="@+id/title_details"
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="10dp"
                            android:paddingBottom="5dp"
                            android:shadowDx="@dimen/detail_text_shadow"
                            android:shadowDy="@dimen/detail_text_shadow"
                            android:shadowRadius="@dimen/detail_text_shadow_radius"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"
                            android:textStyle="bold|italic" tools:ignore="RtlSymmetry"/>
                    <TextView
                            android:id="@+id/detail_author"
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:layout_marginStart="20dp"
                            android:paddingStart="20dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="-8dp"
                            android:textSize="10sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="italic" tools:ignore="RtlSymmetry,SmallSp"/>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            android:layout_marginStart="10dp"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:text="@string/price"
                                android:shadowDx="@dimen/detail_text_shadow"
                                android:shadowDy="@dimen/detail_text_shadow"
                                android:shadowRadius="@dimen/detail_text_shadow_radius"
                                android:shadowColor="@color/colorPrimaryDark"
                                android:elevation="4dp"
                                android:textAlignment="textStart"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/detail_text_size"
                                android:textStyle="italic"/>

                        <TextView
                                android:id="@+id/detail_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="10dp"
                                android:textAlignment="center"
                                android:shadowDx="@dimen/detail_subtext_shadow"
                                android:shadowDy="@dimen/detail_subtext_shadow"
                                android:shadowRadius="@dimen/detail_subtext_shadow_radius"
                                android:shadowColor="@color/colorPrimaryDark"
                                android:textColor="@color/colorPrimaryLight"
                                android:textSize="@dimen/detail_text_size"
                                android:textStyle="bold|italic"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="10dp"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:text="@string/e_book"
                                android:shadowDx="@dimen/detail_text_shadow"
                                android:shadowDy="@dimen/detail_text_shadow"
                                android:shadowRadius="@dimen/detail_text_shadow_radius"
                                android:shadowColor="@color/colorPrimaryDark"
                                android:elevation="4dp"
                                android:textAlignment="textStart"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/detail_text_size"
                                android:textStyle="italic"/>

                        <TextView
                                android:id="@+id/detail_ebook"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="10dp"
                                android:ellipsize="marquee"
                                android:fadingEdge="horizontal"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:scrollHorizontally="true"
                                android:singleLine="true"
                                android:autoLink="web"
                                android:textColorLink="@color/colorAccentDark"
                                android:shadowDx="@dimen/detail_subtext_shadow"
                                android:shadowDy="@dimen/detail_subtext_shadow"
                                android:shadowRadius="@dimen/detail_subtext_shadow_radius"
                                android:shadowColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/detail_text_size"
                                android:textStyle="bold|italic"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="10dp"
                            android:orientation="horizontal">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:text="@string/by_link"
                                android:shadowDx="@dimen/detail_text_shadow"
                                android:shadowDy="@dimen/detail_text_shadow"
                                android:shadowRadius="@dimen/detail_text_shadow_radius"
                                android:shadowColor="@color/colorPrimaryDark"
                                android:elevation="4dp"
                                android:textAlignment="textStart"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/detail_text_size"
                                android:textStyle="italic"/>

                        <TextView
                                android:id="@+id/detail_byLink"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="10dp"
                                android:ellipsize="marquee"
                                android:fadingEdge="horizontal"
                                android:marqueeRepeatLimit="marquee_forever"
                                android:scrollHorizontally="true"
                                android:singleLine="true"
                                android:autoLink="web"
                                android:textColorLink="@color/colorAccentDark"
                                android:shadowDx="@dimen/detail_subtext_shadow"
                                android:shadowDy="@dimen/detail_subtext_shadow"
                                android:shadowRadius="@dimen/detail_subtext_shadow_radius"
                                android:shadowColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/detail_text_size"
                                android:textStyle="bold|italic"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

                <TextView
                        android:id="@+id/description_book_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="15dp"
                        android:textSize="13sp"
                        android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/roman_title"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            android:gravity="center"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/title_card"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/title_roman"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginStart="20dp"
                    android:paddingStart="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/border"
                    android:text="@string/similar_books"
                    android:shadowDx="@dimen/detail_text_shadow"
                    android:shadowDy="@dimen/detail_text_shadow"
                    android:shadowRadius="@dimen/detail_text_shadow_radius"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp"
                    android:textStyle="bold|italic" tools:ignore="RtlSymmetry"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_book_similar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/book_item_detail"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


        <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimaryLight"
                app:menu="@menu/bottom_navigation_menu"
                app:itemIconTint="@drawable/bottom_navigation_colors"
                app:itemTextColor="@drawable/bottom_navigation_colors"
                android:layout_alignParentBottom="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>